--- a/P009349.opf/meta.yml
+++ b/P009349.opf/meta.yml
@@ -1,7 +1,7 @@
-id: opecha:P009349
+id: P009349
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W1KG23850
   title: གཏམ་པདྨའི་ཚལ་གྱི་ཟློས་གར།
-  volume: ''
   author: ''
+  volumes: {}
