--- a/P009349.opf/meta.yml
+++ b/P009349.opf/meta.yml
@@ -4,4 +4,9 @@ source_metadata:
   id: bdr:W1KG23850
   title: གཏམ་པདྨའི་ཚལ་གྱི་ཟློས་གར།
   author: ''
-  volumes: {}
+  volumes:
+    e7531b18462142e4bb22c5c07ed445ab:
+      image_group_id: I1KG24063
+      title: ''
+      volume_number: 1
+      total_pages: 76
