--- a/P009349.opf/layers/v001/Pagination.yml
+++ b/P009349.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 4c76b58440524f83997a6a637e5d39d5
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   75212703eaec4003821a02b9852453ec:
